# EzLaboratory

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  EzLaboratory.slnx  README.md  build.bat  xmake.lua
EzLaboratory/: AbstractBottleItem.cpp  AbstractBottleItem.h  AbstractLiquidContainerItem.cpp  AbstractLiquidContainerItem.h  AbstractPlugItem.cpp  BeakerItem.cpp  BeakerItem.h  BeakerPourHandleItem.cpp  BeakerPourHandleItem.h  BottleLabelItem.cpp  BottleLabelItem.h  BottleStopperItem.cpp  BottleStopperItem.h  CMakeLists.txt  CMakePresets.json  ExperimentSidebarConfigLoader.cpp  ExperimentSidebarConfigLoader.h  EzLaboratory.cpp  EzLaboratory.h  EzLaboratory.qrc  EzLaboratory.slnx  EzLaboratory.ui  EzLaboratory.vcxproj  EzLaboratory.vcxproj.filters  LabGraphicsView.cpp  LabGraphicsView.h  LabItem.cpp  LabItem.h  LabwareItemDelegate.cpp  LabwareItemDelegate.h  LabwareListView.cpp  LabwareListView.h  LabwareTemplateRoles.h  LiquidItem.cpp  LiquidItem.h  MainWindow.cpp  MainWindow.h  NarrowBottleItem.cpp  NarrowBottleItem.h  NarrowBottlePlugItem.cpp  (+8 more)
EzLaboratory/app/: MainWindow.ui
EzLaboratory/laboratory/: AbstractPlugItem.h  BottleLabelRenderer.cpp  BottleLabelRenderer.h  EzLaboratory.cpp  LabGraphicsView.cpp  LabItem.cpp  LabItem.h  LabwareItemDelegate.h  SolidScatterItem.h
EzLaboratory/resources/: EzLaboratory.qrc  LocalExperiments.qrc  Login.qrc  Main.qrc
EzLaboratory/resources/config/: default_agno3_nacl.json  default_cuso4_naoh.json  default_indicator_acid_base.json  default_salt_crystallization.json  demo_experiment_sidebar.json
EzLaboratory/resources/styles/mainwindow/: base.qss  light.qss
EzLaboratory/source/: main.cpp
EzLaboratory/source/app/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
EzLaboratory/source/frontend/pages/history/: HistoryPage.cpp  HistoryPage.h  HistoryPage.ui
EzLaboratory/source/frontend/pages/home/: HomeEmptyState.cpp  HomeEmptyState.h  HomeNetworkDisconnected.cpp  HomeNoExperiment.cpp  HomeNoExperiment.h  HomePage.cpp  HomePage.h  HomePage.ui  HomePageStateMachine.cpp  HomePageStateMachine.h
EzLaboratory/source/frontend/pages/home/state/: HomeEmptyState.cpp  HomeEmptyState.ui  HomeNetworkDisconnected.h
EzLaboratory/source/frontend/pages/profile/: ProfilePage.cpp  ProfilePage.h  ProfilePage.ui
EzLaboratory/source/frontend/pages/settings/: SettingsPage.cpp  SettingsPage.h  SettingsPage.ui
EzLaboratory/source/frontend/widgets/: Card.cpp  Card.h  Card.ui
EzLaboratory/source/frontend/widgets/experiment/: ExperimentCard.cpp  ExperimentCard.h  ExperimentCard.ui
EzLaboratory/source/frontend/widgets/topbar/: TopBarBackButton.cpp  TopBarBackButton.h  TopBarBackButton.ui
EzLaboratory/source/laboratory/: AbstractBottleItem.cpp  AbstractLiquidContainerItem.cpp  AbstractLiquidContainerItem.h  BeakerItem.cpp  BeakerItem.h  BeakerPourHandleItem.cpp  BeakerPourHandleItem.h  BottleLabelData.h  BottleLabelItem.h  EzLaboratory.cpp  EzLaboratory.h  EzLaboratory.ui  LabGraphicsView.cpp  LabGraphicsView.h  LabwareListView.cpp  LabwareTemplateRoles.h  LiquidItem.h  NarrowBottleItem.cpp  NarrowBottleItem.h  NarrowBottlePlugItem.cpp  WideBottleItem.cpp  WideBottleItem.h  WideBottlePlugItem.cpp  WideBottlePlugItem.h
EzLaboratory/source/login/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
EzLaboratory/source/mainwindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
EzLaboratory/source/tool/: ExperimentParser.cpp  ExperimentParser.h  ExperimentReader.cpp  ExperimentReader.h  ExperimentSidebarConfigLoader.cpp  ExperimentSidebarConfigLoader.h
scripts/: BuildCMake2026.bat  CMake.bat  CleanCMake2026.bat
